# binup

./: Cargo.toml  README.md  bump  check-release  test  upgrade
.github/: check-binary  select-build-target
.github/workflows/: release.yml  test.yml
src/: cli.rs  config.rs  core.rs  download.rs  file_types.rs  github.rs  install.rs  list.rs  main.rs  matcher.rs  migration.rs  project.rs  release.rs  tool.rs  uninstall.rs  util.rs  version.rs
