[package]
name = "binup"
version = "1.6.0"
description = "Automated app installation from GitHub releases"
keywords = ["automation", "github", "package-manager", "release", "tools"]
categories = ["command-line-utilities"]

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
homepage = "https://github.com/KonishchevDmitry/binup"
repository = "https://github.com/KonishchevDmitry/binup"
documentation = "https://github.com/KonishchevDmitry/binup"
license = "GPL-3.0+"
readme = "README.md"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
ansi_term = "0.12.1"
bzip2 = "0.5.2"
chrono = "0.4.40"
clap = "4.5.35"
const_format = "0.2.34"
easy-logging = "1"
flate2 = "1.1"
globset = "0.4.16"
http = "1.3.1"
indoc = "2.0.6"
is-terminal = "0.4.16"
itertools = "0.14.0"
octocrab = "0.44.0"
libc = "0.2.171"
log = "0.4.27"
nondestructive = "0.0.26"
platforms = "3.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
semver = "1.0.26"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
strum = "0.27"
strum_macros = "0.27"
tabled = { version = "0.18.0", features = ["ansi"] }
tar = "0.4.44"
textwrap = "0.16.2"
tokio = "1"
url = "2.5.4"
validator = { version = "0.20.0", features = ["derive"] }
xz2 = "0.1.7"

# Force static linking
openssl = { version = "0.10", features = ["vendored"] }
lzma-sys = { version = "0.1", features = ["static"] }

[dev-dependencies]
indoc = "2.0.6"
rstest = "0.25.0"
