[package]
name = "binup"
version = "1.10.1"
description = "Automated app installation from GitHub releases"
keywords = ["automation", "github", "package-manager", "release", "tools"]
categories = ["command-line-utilities"]

authors = ["Dmitry Konishchev <konishchev@gmail.com>"]
homepage = "https://github.com/KonishchevDmitry/binup"
repository = "https://github.com/KonishchevDmitry/binup"
documentation = "https://github.com/KonishchevDmitry/binup"
license = "GPL-3.0+"
readme = "README.md"
edition = "2024"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
ansi_term = "0.12.1"
bzip2 = "0.6.1"
chrono = "0.4.44"
clap = "4.6.0"
const_format = "0.2.35"
easy-logging = "1"
file-format = { version = "0.29.0", features = ["reader"] }
flate2 = "1.1"
futures-util = "0.3.32"
globset = "0.4.18"
http = "1.4.0"
indoc = "2.0.7"
is-terminal = "0.4.17"
itertools = "0.14.0"
octocrab = { version = "0.49.7", features = ["stream"] }
libc = "0.2.185"
log = "0.4.29"
nondestructive = "0.0.28"
platforms = "3.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
rustls = { version = "0.23.38" }
semver = "1.0.28"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_yaml = "0.9.34"
shellexpand = "3.1.2"
strum = "0.28"
strum_macros = "0.28"
tabled = { version = "0.20.0", features = ["ansi"] }
tar = "0.4.45"
tempfile = "3.27.0"
textwrap = "0.16.2"
tokio = "1"
url = "2.5.8"
validator = { version = "0.20.0", features = ["derive"] }
xz2 = "0.1.7"
zip = "8.5.1"

# Force static linking
openssl = { version = "0.10", features = ["vendored"] }
lzma-sys = { version = "0.1", features = ["static"] }

[dev-dependencies]
assert_matches = "1.5.0"
indoc = "2.0.7"
rstest = "0.26.1"
